--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.accio#job{
+	background:black;
+	height:150px;
+	width:150px;
+}
+.hello-accio{
+	color:white;
+	margin-left:32px;
+	padding:10px;
+}
